--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   hexcolor: ^1.0.4
   finite_coverflow: ^1.0.0
+  introduction_screen: ^1.0.9
 
 
   cupertino_icons: ^0.1.3
