added Google Maps Api key

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:name="io.flutter.app.FlutterApplication"
         android:label="padyatra"
         android:icon="@mipmap/ic_launcher">
+         <meta-data android:name="com.google.android.geo.API_KEY"
+                   android:value="AIzaSyBtWxhrulm5hggKulM2LgBoOVyyFFJk4iw"
+        />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
