--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   finite_coverflow: ^1.0.0
   introduction_screen: ^1.0.9
   simple_animations: ^2.2.1
+  location: ^3.0.2
+  google_maps_flutter: ^0.5.3
 
 
   cupertino_icons: ^0.1.3
