added toast package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   simple_animations: ^2.2.1
   location: ^3.0.2
   google_maps_flutter: ^0.5.3
+  toast: ^0.1.5
 
 
   cupertino_icons: ^0.1.3
