--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   location: ^3.0.2
   google_maps_flutter: ^0.5.3
   toast: ^0.1.5
+  fluttertoast: ^7.1.1
 
 
   cupertino_icons: ^0.1.3
