--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_maps_flutter: ^0.5.3
   toast: ^0.1.5
   fluttertoast: ^7.1.1
+  geolocator: ^3.0.1
 
 
   cupertino_icons: ^0.1.3
