--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   toast: ^0.1.5
   fluttertoast: ^7.1.1
   geolocator: ^3.0.1
+  shared_preferences: ^0.5.12+4
 
 
   cupertino_icons: ^0.1.3
