--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="padyatra"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
          <meta-data android:name="com.google.android.geo.API_KEY"
                    android:value="AIzaSyBtWxhrulm5hggKulM2LgBoOVyyFFJk4iw"
