--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   geofence_flutter: ^1.1.0
   shared_preferences: ^0.5.12+4
   url_launcher: ^6.0.3
-
+  flutter_spinkit: ^5.0.0
 
   cupertino_icons: ^0.1.3
   http: ^0.12.2
