--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   url_launcher: ^6.0.3
   flutter_spinkit: ^5.0.0
-
+  image_picker: ^0.6.6+1
   cupertino_icons: ^0.1.3
   http: ^0.12.2
 
