--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,21 +13,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  hexcolor: ^1.0.4
-  finite_coverflow: ^1.0.0
-  introduction_screen: ^1.0.9
+  hexcolor: 
+  finite_coverflow: 
+  introduction_screen: 
   simple_animations: ^2.2.1
-  location: ^3.0.2
-  google_maps_flutter: ^0.5.3
-  toast: ^0.1.5
-  fluttertoast: ^7.1.1
-  geofence_flutter: ^1.1.0
-  shared_preferences: ^0.5.12+4
-  url_launcher: ^6.0.3
-  flutter_spinkit: ^5.0.0
-  image_picker: ^0.6.6+1
-  cupertino_icons: ^0.1.3
-  http: ^0.12.2
+  location: 
+  google_maps_flutter: 
+  toast: 
+  fluttertoast: 
+  geofence_flutter: 
+  shared_preferences: 
+  url_launcher: 
+  flutter_spinkit: 
+  image_picker: 
+  cupertino_icons: 
+  http: 
 
 dev_dependencies:
   flutter_test:
